--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Webpacho": {
+    "primer-proyecto-angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Webpacho",
+            "outputPath": "dist/primer-proyecto-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,9 +24,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              
+              "src/app/components/inicio/validacion.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -61,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Webpacho:build"
+            "browserTarget": "primer-proyecto-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Webpacho:build:production"
+              "browserTarget": "primer-proyecto-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Webpacho:build"
+            "browserTarget": "primer-proyecto-angular:build"
           }
         },
         "test": {
@@ -87,9 +92,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/app/components/inicio/validacion.js"
+            ]
           }
         },
         "lint": {
@@ -109,16 +121,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Webpacho:serve"
+            "devServerTarget": "primer-proyecto-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Webpacho:serve:production"
+              "devServerTarget": "primer-proyecto-angular:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Webpacho"
+  "defaultProject": "primer-proyecto-angular"
+
+  
 }
